--- a/Cleaner/Cleaner.csproj
+++ b/Cleaner/Cleaner.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Version>1.0.2</Version>
-    </PropertyGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Version>1.0.2</Version>
+    <Copyright>(C) 2020 DeuxAlpha</Copyright>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="CommandLineParser" Version="2.8.0" />
-      <PackageReference Include="Serilog" Version="2.9.0" />
-      <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0"/>
+    <PackageReference Include="Serilog" Version="2.9.0"/>
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1"/>
+  </ItemGroup>
 
 </Project>
